# latent_portfolio

./: README.md  config.toml  pyproject.toml
articles/: 001_python_web_scraper.md  002_python_trading_bot.md  010_blender_product_viz.md  015_ae_infographics.md  _article_boilerplate.md
latent_portfolio/: __init__.py  build.py
latent_portfolio/src/templates/: footer.html
