[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "latent_portfolio.__version__"}

[project]
name = "latent_portfolio"
dynamic = ["version"]
description = "A module to publish a list of projects as web visualization of their semantic latent space"
authors = [
    {name = "Bruno Laurencich"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "markdown>=3.5.0",
    "sentence-transformers>=2.7.0", 
    "scikit-learn>=1.3.0",
    "pydantic>=2.0.0",
    "jinja2>=3.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "Pillow>=10.0.0",
    "lxml>=4.9.0"
]

[project.urls]
Homepage = "https://laurenci.ch"
Repository = "https://github.com/daylanKifky/latent_portfolio"

[tool.setuptools]
packages = ["latent_portfolio"]


